@@ -255,4 +255,25 @@ $sql_updates = [
         'query' => "INSERT INTO `site_config` (name, value, description) VALUES ('time_offset', 0, 'The number of hours to adjust site from server time. Default 0: site time === server time')",
         'flush' => 'site_settings_',
     ],
+    [
+        'id'    => 1532859804,
+        'info'  => 'Add newsrss_on to site_config',
+        'date'  => '29 Jul, 2018',
+        'query' => "INSERT INTO `site_config` (name, value, description) VALUES ('newsrss_on', 0, 'Enable RSS News Feeds?'",
+        'flush' => 'site_settings_',
+    ],
+    [
+        'id'    => 1532859805,
+        'info'  => 'Add bucket_allowed to site_config',
+        'date'  => '29 Jul, 2018',
+        'query' => "INSERT INTO `site_config` (name, value, description) VALUES ('bucket_allowed', 0, 'Use BitBucket for user image/avatar storage?'",
+        'flush' => 'site_settings_',
+    ],
+    [
+        'id'    => 1532859806,
+        'info'  => 'Add backgrounds_on_all_pages to site_config',
+        'date'  => '29 Jul, 2018',
+        'query' => "INSERT INTO `site_config` (name, value, description) VALUES ('backgrounds_on_all_pages', 0, ''Display a random background image on all pages, not just details.php",
+        'flush' => 'site_settings_',
+    ],
 ];
